<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRecipeRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ViewRecipe">

    <RelativeLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/copy_button"
            android:background="@drawable/edit_button"
            android:contentDescription='@string/edit' />

        <ImageButton
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/share_button"
            android:background="@drawable/copy_button"
            android:contentDescription='"Duplicate Recipe"' />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            app:srcCompat="@drawable/share_button"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="135dp"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/totalTimeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tagContainerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/viewTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flow_horizontalGap="10dp"
                app:flow_horizontalStyle="packed"
                app:flow_verticalAlign="center"
                app:flow_verticalGap="6dp"
                app:flow_wrapMode="chain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/ingredients"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/ingredientListView"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_weight="0.5"
                android:divider="@android:color/black"
                android:paddingBottom="5dp"
                tools:ignore="DuplicateSpeakableTextCheck"></ListView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <include
                    android:id="@+id/included_photo"
                    layout="@layout/photo_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5" />

                <EditText
                    android:id="@+id/Notes"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:ems="10"
                    android:hint="Add Notes"
                    android:inputType="textLongMessage|textMultiLine" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:background="@color/main_logo" />

        <TextView
            android:id="@+id/directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/directions"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/directionListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="15sp">

        </ListView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>
