<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/IngredientField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:orientation="vertical"
    tools:showIn="@layout/recipe_editor">

    <RelativeLayout
        android:id="@+id/Ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp">


        <ImageButton
            android:id="@+id/IngredientDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/delete_direction"
            app:srcCompat="@drawable/remove_filled_selector" />

        <EditText
            android:id="@+id/IngredientAmount"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/main_logo"
            android:digits="0,1,2,3,4,5,6,7,8,9,/,."
            android:ems="10"
            android:hint="#"
            android:imeOptions="actionDone"
            android:maxWidth="75dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/IngredientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/unitList"
            android:autofillHints=""
            android:backgroundTint="@color/main_logo"
            android:ems="8"
            android:hint="@string/ingredient"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/unitList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/IngredientAmount"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            android:layout_toEndOf="@id/IngredientAmount"
            android:background="@drawable/spinner_background"
            android:contentDescription="@string/units"
            android:dropDownWidth="match_parent"
            android:minWidth="90dp"
            android:spinnerMode="dropdown"
            tools:minWidth="90dp" />

        <View
            android:id="@+id/dividerIng"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/IngredientName"
            android:layout_marginTop="15dp"
            android:background="#8035A696" />

    </RelativeLayout>

</TableRow>
