<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DirectionField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:showIn="@layout/recipe_editor">

    <RelativeLayout
        android:id="@+id/Direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/DirectionDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/delete_direction"
            app:srcCompat="@drawable/remove_filled_selector" />

        <EditText
            android:id="@+id/DirectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_logo"
            android:ems="10"
            android:hint="@string/direction_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:imeOptions="actionDone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textbox"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DirectionName"
            android:layout_marginTop="15dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/direction_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <EditText
            android:id="@+id/TimeEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/DirectionDeleteButton"
            android:backgroundTint="@color/main_logo"
            android:hint="Time"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:id="@+id/directionUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="14dp"
            android:clickable="true"
            android:contentDescription="@string/up"
            android:focusable="true"
            android:onClick="moveUp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:srcCompat="@drawable/up_selector" />

        <ImageView
            android:id="@+id/directionDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/directionUp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:clickable="true"
            android:contentDescription="@string/down"
            android:focusable="true"
            android:onClick="moveDown"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:srcCompat="@drawable/down_selector" />

        <View
            android:id="@+id/dividerDir"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/textbox"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="#8035A696" />

    </RelativeLayout>

</TableRow>
