<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:labelVisibilityMode="labeled"
    tools:context=".res.layout.activity_main">
    <item
        android:id="@+id/new_recipe_button"
        android:title="@string/new_recipe"
        android:icon="@drawable/new_recipe"
        android:enabled="true"/>
    <item
        android:id="@+id/browse_recipe_button"
        android:title="@string/browse_recipes"
        android:icon="@drawable/browse_recipes"
        android:enabled="true"/>
    <item
        android:id="@+id/current_recipe_button"
        android:title="@string/current_recipe"
        android:icon="@drawable/curr_recipe" />
</menu>
