...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_recipe_name"
            android:importantForAutofill="no"
            android:includeFontPadding="true"
            android:inputType="textFilter"
...
