...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editRecipeRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/save_recipe"
...
